bug fixes and drag and drop support

--- a/BetterTabControlTest/MainWindow.xaml
+++ b/BetterTabControlTest/MainWindow.xaml
@@ -9,6 +9,10 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <BetterTabs:BetterTabControl>
+            <BetterTabs:BetterTabControl.Tabs>
+                <BetterTabs:Tab/>
+                <BetterTabs:Tab DisplayIndex="1"/>
+            </BetterTabs:BetterTabControl.Tabs>
         </BetterTabs:BetterTabControl>
     </Grid>
 </Window>
