--- a/BetterTabControl/BetterTabControl.xaml
+++ b/BetterTabControl/BetterTabControl.xaml
@@ -135,7 +135,7 @@
             <Rectangle x:Name="ribbon" Fill="{Binding RibbonColor, Converter={StaticResource BrushColorConverter}, ElementName=betterTabControl}" Height="3" Margin="0,27,0,0"/>
         </Grid>
 
-        <ContentControl x:Name="contentPanel" RenderTransformOrigin="0.5,0.5" Grid.Row="1" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"/>
+        <ContentControl x:Name="contentPanel" RenderTransformOrigin="0.5,0.5" Grid.Row="1" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Content="{Binding SelectedContent, ElementName=betterTabControl, Mode=OneWay}"/>
 
     </Grid>
 </UserControl>
