--- a/BetterTabControlTest/App.xaml
+++ b/BetterTabControlTest/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:BetterTabControlTest"
              StartupUri="Window1.xaml">
     <Application.Resources>
-         
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/BetterTabControl;component/Simple Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
