--- a/BetterTabControl/SampleData/SampleDataSource/SampleDataSource.xaml
+++ b/BetterTabControl/SampleData/SampleDataSource/SampleDataSource.xaml
@@ -5,15 +5,15 @@
 -->
 <SampleDataSource:SampleDataSource xmlns:SampleDataSource="clr-namespace:Expression.Blend.SampleData.SampleDataSource">
 	<SampleDataSource:SampleDataSource.Collection>
-		<SampleDataSource:Item Property1="Cras aenean" Property2="True"/>
-		<SampleDataSource:Item Property1="Class nam mauris" Property2="False"/>
-		<SampleDataSource:Item Property1="Aliquam integer duis nullam" Property2="True"/>
-		<SampleDataSource:Item Property1="Sed aptent" Property2="False"/>
-		<SampleDataSource:Item Property1="Nunc maecenas praesent amet" Property2="True"/>
-		<SampleDataSource:Item Property1="Dis quisque" Property2="False"/>
-		<SampleDataSource:Item Property1="Accumsan ante vivamus aliquam" Property2="True"/>
-		<SampleDataSource:Item Property1="Arcu aliquet" Property2="False"/>
-		<SampleDataSource:Item Property1="Blandit curae" Property2="True"/>
-		<SampleDataSource:Item Property1="Diam auctor donec" Property2="False"/>
+		<SampleDataSource:Item Property1="Cras maecenas" Property2="True"/>
+		<SampleDataSource:Item Property1="Praesent class accumsan aenean" Property2="False"/>
+		<SampleDataSource:Item Property1="Bibendum aliquam integer duis" Property2="True"/>
+		<SampleDataSource:Item Property1="Nam quisque nunc" Property2="False"/>
+		<SampleDataSource:Item Property1="Dictumst vivamus aliquam amet" Property2="True"/>
+		<SampleDataSource:Item Property1="Curae eleifend donec" Property2="False"/>
+		<SampleDataSource:Item Property1="Sed ante facilisi mauris" Property2="True"/>
+		<SampleDataSource:Item Property1="Aliquet arcu dis faucibus" Property2="False"/>
+		<SampleDataSource:Item Property1="Diam nullam etiam blandit" Property2="True"/>
+		<SampleDataSource:Item Property1="Commodo eget" Property2="False"/>
 	</SampleDataSource:SampleDataSource.Collection>
 </SampleDataSource:SampleDataSource>
