--- a/BetterTabControlTest/SampleData/SampleDataSource/SampleDataSource.xaml
+++ b/BetterTabControlTest/SampleData/SampleDataSource/SampleDataSource.xaml
@@ -5,15 +5,15 @@
 -->
 <SampleDataSource:SampleDataSource xmlns:SampleDataSource="clr-namespace:Expression.Blend.SampleData.SampleDataSource">
 	<SampleDataSource:SampleDataSource.Collection>
-		<SampleDataSource:Item Property1="Aenean mauris maecenas" Property2="True"/>
-		<SampleDataSource:Item Property1="Cras praesent aliquam" Property2="False"/>
-		<SampleDataSource:Item Property1="Class nullam nam sed" Property2="True"/>
-		<SampleDataSource:Item Property1="Curae accumsan" Property2="False"/>
-		<SampleDataSource:Item Property1="Dis bibendum integer quisque" Property2="True"/>
-		<SampleDataSource:Item Property1="Dictumst vivamus aptent donec" Property2="False"/>
-		<SampleDataSource:Item Property1="Est aliquam duis" Property2="True"/>
-		<SampleDataSource:Item Property1="Eleifend aliquet auctor" Property2="False"/>
-		<SampleDataSource:Item Property1="Blandit hac" Property2="True"/>
-		<SampleDataSource:Item Property1="Facilisi faucibus" Property2="False"/>
+		<SampleDataSource:Item Property1="Aenean nam aliquam" Property2="True"/>
+		<SampleDataSource:Item Property1="Integer sed" Property2="False"/>
+		<SampleDataSource:Item Property1="Cras mauris dis nullam" Property2="True"/>
+		<SampleDataSource:Item Property1="Est aptent duis auctor" Property2="False"/>
+		<SampleDataSource:Item Property1="Congue class" Property2="True"/>
+		<SampleDataSource:Item Property1="Maecenas quisque" Property2="False"/>
+		<SampleDataSource:Item Property1="Nunc amet cursus" Property2="True"/>
+		<SampleDataSource:Item Property1="Dictum ante" Property2="False"/>
+		<SampleDataSource:Item Property1="Curae hac arcu" Property2="True"/>
+		<SampleDataSource:Item Property1="Praesent lectus" Property2="False"/>
 	</SampleDataSource:SampleDataSource.Collection>
 </SampleDataSource:SampleDataSource>
