--- a/BetterTabControl/BetterTabControl.xaml
+++ b/BetterTabControl/BetterTabControl.xaml
@@ -6,23 +6,14 @@
              xmlns:local="clr-namespace:BetterTabs"
              xmlns:System="clr-namespace:System;assembly=mscorlib" xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Loaded="BetterTabControl_Loaded" PreviewMouseLeftButtonUp="BetterTabControl_PreviewMouseLeftButtonUp" PreviewMouseMove="BetterTabControl_PreviewMouseMove">
+             d:DesignHeight="450" d:DesignWidth="800" Loaded="BetterTabControl_Loaded" PreviewMouseLeftButtonUp="BetterTabControl_PreviewMouseLeftButtonUp" PreviewMouseMove="BetterTabControl_PreviewMouseMove" AllowDrop="True">
     <UserControl.Resources>
         <local:Tab x:Key="tab"/>
         <System:String x:Key="NewTabDisplayText">+</System:String>
-        <SolidColorBrush x:Key="BarBackgroundColor" Color="{DynamicResource {x:Static SystemColors.MenuBarColorKey}}"/>
-        <SolidColorBrush x:Key="TabBackgroundColor" Color="{DynamicResource {x:Static SystemColors.MenuBarColorKey}}"/>
-        <SolidColorBrush x:Key="TabTexttColor" Color="{DynamicResource {x:Static SystemColors.ControlTextColorKey}}"/>
-        <SolidColorBrush x:Key="SelectedTabBackgroundColor" Color="{DynamicResource {x:Static SystemColors.ControlDarkDarkColorKey}}"/>
-        <SolidColorBrush x:Key="SelectedTabTexttColor" Color="White"/>
-        <SolidColorBrush x:Key="MouseOverTabBackgroundColor" Color="{DynamicResource {x:Static SystemColors.HighlightColorKey}}"/>
-        <SolidColorBrush x:Key="MouseOverTabTexttColor" Color="{DynamicResource {x:Static SystemColors.HighlightTextColorKey}}"/>
-        <SolidColorBrush x:Key="MouseOverCloseTabTexttColor" Color="Red"/>
-        <SolidColorBrush x:Key="RibbonColor" Color="{DynamicResource {x:Static SystemColors.HighlightColorKey}}"/>
+        <System:Object x:Key="CloseButtonContent"/>
         <ItemsPanelTemplate x:Key="TabPanelTemplate">
             <StackPanel IsItemsHost="True" Orientation="Horizontal"/>
         </ItemsPanelTemplate>
-        <local:BrushColorConverter x:Key="BrushColorConverter"/>
         <local:ChangeColorBrightness x:Key="ChangeColorBrightness"/>
         <FontWeight x:Key="BoldFont">Bold</FontWeight>
         <Style x:Key="ButtonFocusVisual">
@@ -46,37 +37,40 @@
             </Setter>
         </Style>
         <DataTemplate x:Key="TabTemplate" DataType="local:Tab">
-            <Grid x:Name="tabBackground" MinHeight="17" MaxHeight="47" MinWidth="35" MaxWidth="150" Background="{Binding TabBackgroundColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}" MouseEnter="TabBackground_MouseEnter" AllowDrop="True" PreviewDragOver="TabBackground_PreviewDragOver">
+            <Grid x:Name="tabBackground" MinHeight="17" MaxHeight="47" MinWidth="35" MaxWidth="150" Background="{Binding TabBackgroundColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}" MouseEnter="TabBackground_MouseEnter" AllowDrop="True" PreviewDragOver="TabBackground_PreviewDragOver">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Button x:Name="tabButton" Content="{Binding TabTitle}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}" Foreground="{Binding TabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}" Background="{x:Null}" BorderThickness="0" Style="{DynamicResource ButtonStyle}" MinWidth="27" Padding="1" Margin="2,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" PreviewMouseLeftButtonDown="TabButton_PreviewMouseLeftButtonDown"/>
-                <Button x:Name="closeButton" Content="X" VerticalAlignment="Stretch" Width="Auto" Grid.Column="1" FontWeight="{DynamicResource BoldFont}" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" BorderThickness="0" Style="{DynamicResource ButtonStyle}" HorizontalContentAlignment="Stretch" MinWidth="8" Padding="3" Margin="2,0" VerticalContentAlignment="Stretch" Click="CloseButton_Click"/>
+                <Button x:Name="closeButton" Content="{Binding CloseButtonContent, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}" VerticalAlignment="Stretch" Width="Auto" Grid.Column="1" FontWeight="{DynamicResource BoldFont}" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" BorderThickness="0" Style="{DynamicResource ButtonStyle}" HorizontalContentAlignment="Stretch" MinWidth="8" Padding="3" Margin="2,0" VerticalContentAlignment="Stretch" Click="CloseButton_Click"/>
             </Grid>
             <DataTemplate.Triggers>
+                <DataTrigger Binding="{Binding Dragging}" Value="True">
+                    <Setter Property="IsHitTestVisible" TargetName="tabBackground" Value="False"/>
+                </DataTrigger>
                 <DataTrigger Binding="{Binding Selected}" Value="True">
-                    <Setter Property="Foreground" TargetName="tabButton" Value="{Binding SelectedTabTextColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                    <Setter Property="Background" TargetName="tabBackground" Value="{Binding SelectedTabBackgroundColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                    <Setter Property="Foreground" TargetName="closeButton" Value="{Binding SelectedTabTextColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                    <Setter Property="Foreground" TargetName="tabButton" Value="{Binding SelectedTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                    <Setter Property="Background" TargetName="tabBackground" Value="{Binding SelectedTabBackgroundColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                    <Setter Property="Foreground" TargetName="closeButton" Value="{Binding SelectedTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
                 </DataTrigger>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Foreground" TargetName="tabButton" Value="{Binding MouseOverTabTextColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                    <Setter Property="Background" TargetName="tabBackground" Value="{Binding MouseOverTabBackgroundColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                    <Setter Property="Foreground" TargetName="closeButton" Value="{Binding MouseOverTabTextColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                    <Setter Property="Foreground" TargetName="tabButton" Value="{Binding MouseOverTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                    <Setter Property="Background" TargetName="tabBackground" Value="{Binding MouseOverTabBackgroundColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                    <Setter Property="Foreground" TargetName="closeButton" Value="{Binding MouseOverTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
                 </Trigger>
                 <Trigger Property="IsMouseOver" Value="True" SourceName="closeButton">
                     <Setter Property="Background" TargetName="closeButton" Value="{Binding MouseOverTabBackgroundColor, ConverterParameter=.25, Converter={StaticResource ChangeColorBrightness}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                    <Setter Property="Foreground" TargetName="closeButton" Value="{Binding MouseOverCloseTabTextColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                    <Setter Property="Foreground" TargetName="closeButton" Value="{Binding MouseOverCloseTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
                 </Trigger>
                 <Trigger Property="IsPressed" Value="True" SourceName="closeButton">
-                    <Setter Property="Foreground" TargetName="closeButton" Value="{Binding MouseOverCloseTabTextColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                    <Setter Property="Foreground" TargetName="closeButton" Value="{Binding MouseOverCloseTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
                     <Setter Property="Background" TargetName="closeButton" Value="{Binding MouseOverTabBackgroundColor, ConverterParameter=-.25, Converter={StaticResource ChangeColorBrightness}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
                 </Trigger>
                 <Trigger Property="IsPressed" Value="True" SourceName="tabButton">
                     <Setter Property="Background" TargetName="tabBackground" Value="{Binding MouseOverTabBackgroundColor, ConverterParameter=-.25, Converter={StaticResource ChangeColorBrightness}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                    <Setter Property="Foreground" TargetName="tabButton" Value="{Binding MouseOverTabTextColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                    <Setter Property="Foreground" TargetName="closeButton" Value="{Binding MouseOverTabTextColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                    <Setter Property="Foreground" TargetName="tabButton" Value="{Binding MouseOverTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                    <Setter Property="Foreground" TargetName="closeButton" Value="{Binding MouseOverTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
                 </Trigger>
             </DataTemplate.Triggers>
         </DataTemplate>
@@ -91,11 +85,11 @@
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsFocused" Value="False"/>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" TargetName="border" Value="{Binding MouseOverTabBackgroundColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                                <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding MouseOverTabTextColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                                <Setter Property="Background" TargetName="border" Value="{Binding MouseOverTabBackgroundColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                                <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding MouseOverTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
                             </Trigger>
                             <Trigger Property="IsPressed" Value="True">
-                                <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding MouseOverTabTextColor, Converter={StaticResource BrushColorConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                                <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding MouseOverTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
                                 <Setter Property="Background" TargetName="border" Value="{Binding MouseOverTabBackgroundColor, ConverterParameter=-.25, Converter={StaticResource ChangeColorBrightness}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
                             </Trigger>
                             <Trigger Property="IsFocused" Value="True"/>
@@ -105,7 +99,7 @@
             </Setter>
         </Style>
     </UserControl.Resources>
-    <Grid x:Name="baseGrid">
+    <Grid x:Name="baseGrid" PreviewMouseMove="BaseGrid_PreviewMouseMove">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="{Binding ActualWidth, ElementName=betterTabControl, Mode=OneWay}"/>
         </Grid.ColumnDefinitions>
@@ -114,12 +108,12 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Grid x:Name="tabBarGrid" Margin="0,0,0,3">
+        <Grid x:Name="tabBarGrid" Margin="0,0,0,3" AllowDrop="True">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="3" MaxHeight="3" MinHeight="3"/>
             </Grid.RowDefinitions>
-            <Grid x:Name="tabsGrid" Background="{Binding BarBackgroundColor, ElementName=betterTabControl}" PreviewDrop="TabsGrid_PreviewDrop" PreviewDragOver="TabsGrid_PreviewDragOver" PreviewDragEnter="TabsGrid_PreviewDragEnter" PreviewDragLeave="TabsGrid_PreviewDragLeave" AllowDrop="True">
+            <Grid x:Name="tabsGrid" Background="{Binding BarBackgroundColor, ElementName=betterTabControl}" AllowDrop="True">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="3"/>
@@ -127,12 +121,14 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="100*"/>
                 </Grid.ColumnDefinitions>
                 <ItemsControl x:Name="tabsPanel" Margin="0" ItemsPanel="{DynamicResource TabPanelTemplate}" ItemTemplate="{DynamicResource TabTemplate}" DataContext="{DynamicResource tab}" ItemsSource="{Binding Tabs, ElementName=betterTabControl}" VerticalContentAlignment="Center" PreviewMouseMove="TabsPanel_PreviewMouseMove"/>
-                <Button x:Name="newTab" Content="{Binding NewTabDisplayText, ElementName=betterTabControl}" Grid.Column="1" Style="{DynamicResource NewTabButtonStyle}" Height="27" MinWidth="20" FontWeight="Bold" MinHeight="17" MaxHeight="47" MaxWidth="50" FocusVisualStyle="{x:Null}" Click="NewTab_Click"/>
+                <Button x:Name="newTab" Content="{Binding NewTabDisplayText, ElementName=betterTabControl}" Grid.Column="1" Style="{DynamicResource NewTabButtonStyle}" Height="27" MinWidth="20" FontWeight="Bold" MinHeight="17" MaxHeight="47" MaxWidth="50" FocusVisualStyle="{x:Null}" Click="NewTab_Click" PreviewDragOver="NewTab_PreviewDragOver"/>
+                <Rectangle x:Name="filler" Fill="{Binding BarBackgroundColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}" Margin="20,0,760,0" Grid.Column="2" PreviewDragOver="Filler_PreviewDragOver"/>
 
             </Grid>
-            <Rectangle x:Name="ribbon" Fill="{Binding RibbonColor, Converter={StaticResource BrushColorConverter}, ElementName=betterTabControl}" Height="3" Margin="0,27,0,0"/>
+            <Rectangle x:Name="ribbon" Fill="{Binding RibbonColor, ElementName=betterTabControl}" Height="3" Margin="0,27,0,0" Grid.ColumnSpan="2"/>
         </Grid>
 
         <ContentControl x:Name="contentPanel" RenderTransformOrigin="0.5,0.5" Grid.Row="1" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Content="{Binding SelectedContent, ElementName=betterTabControl, Mode=OneWay}"/>
